--- a/JS Back-end/MongoDB and Mongoose - Workshop/Cubicle/views/details.hbs
+++ b/JS Back-end/MongoDB and Mongoose - Workshop/Cubicle/views/details.hbs
@@ -8,4 +8,25 @@
     <a class="btn" href="/">Back</a>
     <a class="btn" href="/edit/{{_id}}">Edit</a>
 </div>
+<h2>Accessories</h2>
+<div class="accessories">
+    {{#each accessories}}
+    {{> accessory}}
+    {{else}}
+    <h3 class="italic">This cube has no accessories yet...</h3>
+    {{/each}}
+</div>
+<div class="details">
+    <form action="/comments/{{_id}}/create" method="POST">
+        <span>Your name:</span><input type="text" name="author"><br>
+        <span>Comment:</span><br>
+        <textarea name="content"></textarea>
+        <input type="submit" value="Post comment">
+    </form>
+    {{#each comments}}
+    {{> comment}}
+    {{else}}
+    <span style="font-style: italic;">No comments yet. Be the first!</span>
+    {{/each}}
+</div>
 {{/with}}
