--- a/JS Back-end/MongoDB and Mongoose - Workshop/Cubicle/views/details.hbs
+++ b/JS Back-end/MongoDB and Mongoose - Workshop/Cubicle/views/details.hbs
@@ -1,11 +1,11 @@
 {{#with cube}}
 <h1>{{name}}</h1>
-<img class="cube"
-    src="{{imageUrl}}">
+<img class="cube" src="{{imageUrl}}">
 <div class="details">
     <p><span>Description:</span> {{description}}</p>
     <p><span>Difficulty level:</span> {{difficulty}}</p>
     <a class="btn" href="/">Back</a>
+    <a class="btn" href="/details/{{_id}}/attach">Attach Stickers</a>
     <a class="btn" href="/edit/{{_id}}">Edit</a>
 </div>
 <h2>Accessories</h2>
